YAML-STANDARD/k3s/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: standard
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
    - port: 80
      nodePort: 30080
