YAML-STANDARD/k3s/pgadmin/ingress.yaml
apiVersion: networking.k3s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
spec:
  rules:
    - http:
        paths:
          - path: /pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
